# skill-ovos-fallback-gemini-chat

./: README.md  pyproject.toml
scripts/: prepare_translations.py  sync_translations.py
src/locale/pt-br/: asking.dialog
src/skill_ovos_fallback_gemini_chat/: __init__.py
src/skill_ovos_fallback_gemini_chat/locale/pt-br/: error.dialog
src/translations/pt-br/: dialogs.json
test/unittests/: test_main.py
