[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
locale = ["*/*.dialog"]
translations = ["*/*.json"]

[project]
name = "skill-ovos-fallback-gemini-chat"
version = "0.0.1"
authors = [
  { name="Flávio De Melo", email="flavio.eler@gmail.com" },
]
description = "A GUI client for OpenVoiceOS based on PyHTMX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "ovos-solver-plugin-gemini-chat>=0.0.1",
    "ovos-utils>=0.8.0",
    "ovos_workshop>=7.0.0",
    "ovos-plugin-manager>=1.0.0",
    "ovos-translate-server-plugin",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/femelo/skill-ovos-fallback-gemini-chat"
Issues = "https://github.com/femelo/skill-ovos-fallback-gemini-chat/issues"
