[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skill_ovos_fallback_gemini_chat = [
    "**/*.dialog",
    "**/*.json",
]

[tool.hatch.version]
path = "src/skill_ovos_fallback_gemini_chat/__version__.py"

[project]
name = "skill-ovos-fallback-gemini-chat"
keywords = ["ovos", "skill", "plugin", "gemini", "chat"]
dynamic = ["version"]
authors = [
  { name="Flávio De Melo", email="flavio.eler@gmail.com" },
]
description = "A GUI client for OpenVoiceOS based on PyHTMX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ovos-solver-plugin-gemini-chat>=0.0.1",
    "ovos-utils>=0.8.0",
    "ovos_workshop>=7.0.0",
    "ovos-plugin-manager>=1.0.0",
    "ovos-translate-server-plugin",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/femelo/skill-ovos-fallback-gemini-chat"
Issues = "https://github.com/femelo/skill-ovos-fallback-gemini-chat/issues"

[project.entry-points."ovos.plugin.skill"]
"skill-ovos-fallback-gemini-chat.femelo" = "skill_ovos_fallback_gemini_chat:GeminiChatSkill"
